removed float right from 3rd header column to achieve correct alignment

--- a/ui/src/js/common/header/header.less
+++ b/ui/src/js/common/header/header.less
@@ -1,7 +1,6 @@
 @media(min-width: 681px) {
   .header {
     .col-md-4:nth-child(3) {
-      float: right!important;
       .buttonBar {
         float: right!important;
       }
